Still messing around with pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,6 @@ repos:
   hooks:
   - id: check-yaml
   - id: end-of-file-fixer
-  - id: trailing-whitespace
   - id: check-executables-have-shebangs
   - id: debug-statements
   - id: check-merge-conflict
@@ -16,80 +15,89 @@ repos:
   hooks:
   - id: preprocess-events
     name: Preprocess the events file
-    types: [ csv, yaml ]
-    entry: "cd ./it_modernization && pipenv run python scripts/01_preprocess_events_yaml.py"
+    files: ^it_modernization/
+    types_or: [ csv, yaml ]
+    entry: "pipenv run python ./it_modernization/scripts/01_preprocess_events_yaml.py"
     pass_filenames: false
     require_serial: true
     language: system
 
   - id: preprocess-join-csvs
     name: Preprocess the DB table CSVs
-    types: [ csv, yaml ]
+    files: ^it_modernization/
+    types_or: [ csv, yaml ]
     pass_filenames: false
     require_serial: true
-    entry: "cd ./it_modernization && pipenv run python scripts/02_preprocess_db_tables.py"
+    entry: "pipenv run python ./it_modernization/scripts/02_preprocess_db_tables.py"
     language: system
 
   - id: generate-aliases-yaml
     name: Generate the aliases file
-    types: [ csv, yaml ]
+    files: ^it_modernization/
+    types_or: [ csv, yaml ]
     pass_filenames: false
     require_serial: true
-    entry: "cd ./it_modernization && pipenv run python scripts/11_generate_aliases_yaml.py"
+    entry: "pipenv run python ./it_modernization/scripts/11_generate_aliases_yaml.py"
     language: system
 
   - id: generate-events-yaml
     name: Generate the events.yaml file
-    types: [ csv, yaml ]
+    files: ^it_modernization/
+    types_or: [ csv, yaml, json ]
     pass_filenames: false
     require_serial: true
-    entry: "cd ./it_modernization && pipenv run python scripts/12_generate_events_yaml.py"
+    entry: "pipenv run python ./it_modernization/scripts/12_generate_events_yaml.py"
     language: system
 
   - id: generate-events-csv
     name: Generate the events.csv file
-    types: [ csv, yaml ]
+    files: ^it_modernization/
+    types_or: [ csv, yaml ]
     pass_filenames: false
     require_serial: true
-    entry: "cd ./it_modernization && pipenv run python scripts/13_generate_events_yaml.py"
+    entry: "pipenv run python ./it_modernization/scripts/13_generate_events_csv.py"
     language: system
 
   - id: generate-postings-yaml
     name: Generate the postings.yaml file
-    types: [ csv, yaml ]
+    files: ^it_modernization/
+    types_or: [ csv, yaml ]
     pass_filenames: false
     require_serial: true
-    entry: "cd ./it_modernization && pipenv run python scripts/14_generate_postings_yaml.py"
+    entry: "pipenv run python ./it_modernization/scripts/14_generate_postings_yaml.py"
     language: system
 
   - id: generate-people-yaml
     name: Generate the people.yaml file
-    types: [ csv, yaml ]
+    files: ^it_modernization/
+    types_or: [ csv, yaml ]
     pass_filenames: false
     require_serial: true
-    entry: "cd ./it_modernization && pipenv run python scripts/15_generate_people_yaml.py"
+    entry: "pipenv run python ./it_modernization/scripts/15_generate_people_yaml.py"
     language: system
 
   - id: generate-agency-comprehensive-yaml
     name: Generate the agency_comprehensive.yaml file
-    types: [ csv, yaml ]
+    files: ^it_modernization/
+    types_or: [ csv, yaml ]
     pass_filenames: false
     require_serial: true
-    entry: "cd ./it_modernization && pipenv run python scripts/16_generate_agency_comprehensive_yaml.py"
+    entry: "pipenv run python ./it_modernization/scripts/16_generate_agency_comprehensive_yaml.py"
     language: system
 
   - id: generate-mermaid-chart
     name: Generate the mermaid chart prototype
-    types: [ csv, yaml ]
+    files: ^it_modernization/
+    types_or: [ csv, yaml, markdown ]
     pass_filenames: false
     require_serial: true
-    entry: "cd ./it_modernization && pipenv run python scripts/17_generate_mermaid_chart_md.py"
+    entry: "pipenv run python ./it_modernization/scripts/17_generate_mermaid_chart_md.py"
     language: system
-
-  - id: generate-agency-staffing-chart
-    name: Generate the agency mermaid chart prototype
-    types: [ csv, yaml ]
-    pass_filenames: false
-    require_serial: true
-    entry: "cd ./it_modernization && pipenv run python scripts/18_generate_agency_mermaid.py"
-    language: system
+  # - id: generate-agency-staffing-chart
+  #   name: Generate the agency mermaid chart prototype
+  #   files: ^it_modernization/
+  #   types_or: [ csv, yaml, markdown ]
+  #   pass_filenames: false
+  #   require_serial: true
+  #   entry: "pipenv run python ./it_modernization/scripts/18_generate_agency_mermaid.py"
+  #   language: system
