--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -5664,14 +5664,32 @@ NIST:
 NSF:
   name: National Science Foundation
   id: NSF
-  associated: []
+  associated:
+  - Luke Farritor
+  - Rachel Riley
+  - Zach Terrell
   events:
   - date: 2025-04-14
     type: report
     event: Three unidentified DOGE staffers show up at NSF headquarters, forcing all approved grants to go through a "secondary review"
+    comment: These three were named in later reporting, so adding here
+    named:
+    - Luke Farritor
+    - Zach Terrell
+    - Rachel Riley
     source: https://www.science.org/content/article/nsf-halts-grant-awards-while-staff-do-second-review
     agency: NSF
     id: UyobwqMu
+  - date: 2025-04-22
+    type: report
+    event: Three DOGE staffers are now at the National Science Foundation reviewing grants. Luke Farritor has a "Budget, Finance, and Administration" clearance, which a source said allows him to view and modify the agency's funding opportunity system.
+    named:
+    - Luke Farritor
+    - Zach Terrell
+    - Rachel Riley
+    source: https://fedscoop.com/national-science-foundation-nsf-doge-grants-data-systems/
+    agency: NSF
+    id: meBB4VsV
   systems: {}
   cases: {}
 
