--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -2482,7 +2482,10 @@ Education:
       date_filed: 2025-03-07
       case_no: 1:25-cv-00684
       link: https://www.courtlistener.com/docket/69715653/democracy-forward-foundation-v-us-department-of-the-treasury/
-      agency: Education
+      agency:
+      - Education
+      - Treasury
+      - SBA
     1:25-cv-10601:
       name: State of New York v. McMahon (D.Mass)
       description: Twenty states and the District of Columbia requested the court to halt the announced Department of Education and the Trump administration's planned Reduction in Force (RIF) of half of the remaining employees and closure of the DOE.
@@ -3362,7 +3365,10 @@ Treasury:
       date_filed: 2025-03-07
       case_no: 1:25-cv-00684
       link: https://www.courtlistener.com/docket/69715653/democracy-forward-foundation-v-us-department-of-the-treasury/
-      agency: Treasury
+      agency:
+      - Education
+      - Treasury
+      - SBA
     1:25-cv-01144:
       name: New York et al v. Donald J. Trump (S.D.N.Y.)
       description: Nineteen state attorneys general sued President Donald Trump and Secretary of the Treasury Scott Bessent alleging that individuals affiliated with the Department of Government Efficiency ("DOGE") were granted unauthorized access to sensitive Treasury Department records in violation of the Administrative Procedure Act, the Privacy Act, and other ethics statutes.
@@ -6410,7 +6416,10 @@ SBA:
       date_filed: 2025-03-07
       case_no: 1:25-cv-00684
       link: https://www.courtlistener.com/docket/69715653/democracy-forward-foundation-v-us-department-of-the-treasury/
-      agency: SBA
+      agency:
+      - Education
+      - Treasury
+      - SBA
 
 SSA:
   name: Social Security Administration
