--- a/.gitignore
+++ b/.gitignore
@@ -173,4 +173,4 @@ cython_debug/
 .vscode/settings.json
 exec_order_lawsuits/.python-version
 unemployment_claims/weekly_claims.numbers
-it_modernization/README.md
+it_modernization/doge.sqlite
