--- a/it_modernization/raw_data/agencies.yaml
+++ b/it_modernization/raw_data/agencies.yaml
@@ -207,6 +207,10 @@
   id: State
   doge_base: true
 
+- name: Transportation Security Administration
+  id: TSA
+  parent_id: DHS
+
 - name: U.S. African Development Foundation
   id: USADF
 
