--- a/it_modernization/raw_data/events.yaml
+++ b/it_modernization/raw_data/events.yaml
@@ -6129,6 +6129,13 @@
   agency: DOL
   id: 5ZoiqF9F
 
+- date: 2025-04-21
+  type: report
+  event: IT staff reported they were heavily targeted for layoffs despite complying with requests to provide information about critical systems, meaning much more of the FDA infrastructure is at risk of failure
+  source: https://fedscoop.com/fda-tech-officials-complied-with-doges-requests-for-data-the-staff-reductions-still-came/
+  agency: FDA
+  id: 34MikyKs
+
 - date: 2025-04-22
   type: report
   event: Three DOGE staffers are now at the National Science Foundation reviewing grants. Luke Farritor has a "Budget, Finance, and Administration" clearance, which a source said allows him to view and modify the agency's funding opportunity system.
