Small data correction for duplicate record

--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -5215,20 +5215,13 @@ IRS:
     agency: IRS
     id: L7ZMfuRD
   - date: 2025-04-18
-    type: access_revoked
+    type: offboarded
     comment: Figure out what systems he was granted access for
     event: Gavin Kliger's building and system access at the IRS is rescinded
     named:
     - Gavin Kliger
     agency: IRS
     id: WcfPQ6YY
-  - date: 2025-04-18
-    type: offboarded
-    event: Gavin Kliger's building and system access at the IRS is rescinded
-    named:
-    - Gavin Kliger
-    agency: IRS
-    id: As6jiANi
   systems:
     IDRS:
       name: Integrated Data Retrieval System
@@ -5446,6 +5439,12 @@ NLRB:
     - NLRB
     - CISA
     id: 2SR8EJa8
+  - date: 2025-04-14
+    type: disruption
+    event: On the day that NPR published its story with the NLRB whistleblower claims, the Deputy CIO of the agency, Eric Mark, suspends administrative access for all employees, locking the IT staff out of their ability to do their jobs
+    source: https://krebsonsecurity.com/2025/04/whistleblower-doge-siphoned-nlrb-case-data/
+    agency: NLRB
+    id: 7x2jXvup
   - date: 2025-04-16
     type: report
     event: Two DOGE staffers are reportedly detailed from the GSA to work at the NLRB for the next few months
@@ -7245,6 +7244,12 @@ SSA:
     source: https://www.washingtonpost.com/politics/2025/04/18/immigrants-dead-social-security-alive/
     agency: SSA
     id: Tb3wbZWT
+  - date: 2025-04-23
+    type: disruption
+    event: DOGE has reportedly added 10 million records into the Death Master File since March. Some very alive Americans have been declared dead as a result.
+    source: https://www.washingtonpost.com/politics/2025/04/23/dead-social-security-doge-musk/
+    agency: SSA
+    id: enUTyZZ7
   systems:
     AFES:
       name: Anti-Fraud Enterprise Solution
